# stochkin

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  getting_started.rst  index.rst  requirements.txt
docs/api/: boundaries.rst  committor.rst  fes.rst  fpe.rst  index.rst  integrators.rst  mfep.rst  mfpt.rst  plotting.rst  potentials.rst  replicas.rst  style.rst  uncertainty.rst  workflows.rst
examples/: 01_analytic_doublewell.py  02_1d_plumed_fes_ctmc.py  03_1d_hummer_D_ctmc.py  04_mfep_ctmc.py  05_pairwise_mfep_paths.py  06_uncertainty.py  07_fast_langevin_1d.py  generate_synthetic_data.py
examples/data/: synthetic_diffusion_profile.csv
notebooks/: 00_generate_synthetic_data.ipynb  01_analytic_doublewell.ipynb  02_1d_plumed_fes_ctmc.ipynb  03_1d_hummer_D_ctmc.ipynb  04_mfep_ctmc.ipynb  05_pairwise_mfep_paths.ipynb  06_uncertainty.ipynb  README.md
stochkin/: __init__.py  _fast_langevin1d.cpp  boundaries.py  committor.py  fast_langevin.py  fes.py  fpe.py  integrators.py  mfep.py  mfpt.py  plotting.py  potentials.py  replicas.py  style.py  uncertainty.py  workflows.py
tests/: test_fast_langevin.py  test_notebooks.py  test_smoke.py
tools/: build_example_notebooks.py
